# watchdog

./: Cargo.toml  README.md  build.rs
assets/: config.json
clients/: TouchApp.3.toe
clients/Backup/: TouchApp.1.toe  TouchApp.2.toe
src/: app.rs  gui.rs  main.rs  utils.rs
src/app/: apps.rs  config.rs  osc.rs  osc_manager.rs  perf.rs  renderer.rs  state.rs  stats.rs  tray_manager.rs  ui.rs  window_manager.rs
src/app/ui/: components.rs  exit.rs  icons.rs  nav_bar.rs  perf.rs  resize_borders.rs  section_apps.rs  section_config.rs  section_stats.rs  sections.rs  title_bar.rs  typography.rs
working/: Watchdog.fig  icons-2.ai  icons.ai  watchdog-logo.ai
