[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
env_logger = "0.10.0"
image = "0.24.6"
muda = "0.5.0"
tray-icon = "0.5.1"
windows-sys = "0.48.0"
winit = "0.28.6"
