[package]
name = "watchdog"
version = "0.1.0"
authors = ["Blake Rutledge <blake@blakerutledge.com>"]
edition = "2021"

[dependencies]
chrono = "0.4"
eframe = "0.21.0"
egui = "0.21.0"
egui_wgpu_backend = "0.23.0"
egui_winit_platform = "0.18.0"
env_logger = "0.10.0"
image = "0.24.6"
muda = "0.5.0"
pollster = "0.3.0"
rosc = "0.10.1"
tray-icon = "0.5.1"
wgpu = "0.16.1"
windows-sys = "0.48.0"
winit = { version = "0.28.6", features = ["x11"] }

[build-dependencies]
winres = "0.1.12"
